[package]
name = "cloud-storage"
version = "0.11.1"
authors = ["Luuk Wester <luuk.wester@gmail.com>"]
edition = "2018"
description = "A crate for uploading files to Google cloud storage, and for generating download urls."
license = "MIT"
repository = "https://github.com/ThouCheese/cloud-storage-rs"
documentation = "https://docs.rs/cloud-storage"
keywords = ["google", "cloud", "storage"]
readme = "README.md"
categories = ["api-bindings", "web-programming"]
resolver = "2"
# maintenance = { status = "actively-developed" }

[features]
default = ["native-tls"]

global-client = []
sync = ["reqwest/blocking"]
native-tls = ["reqwest/default-tls", "openssl"]
rustls-tls = ["reqwest/rustls-tls", "ring", "pem"]
trust-dns = ["reqwest/trust-dns"]

[dependencies]
reqwest = { version = "0.12.7", default-features = false, features = ["json", "stream"] }

percent-encoding = { version = "2", default-features = false }

jsonwebtoken = { version = "9.3.0", default-features = false, features = ["use_pem"] }

serde = { version = "1", default-features = false, features = ["derive"] }
serde_json = { version = "1", default-features = false }

base64 = { version = "0.22.1", default-features = false }
lazy_static = { version = "1", default-features = false }

dotenv = { version = "0.15", default-features = false }

chrono = { version = "0.4", default-features = false, features = ["serde", "now"] }
hex = { version = "0.4", default-features = false, features = ["alloc"] }

tokio = { version = "1.0", default-features = false, features = ["macros", "rt", "sync"] }
futures-util = { version = "0.3", default_features = false, features = ["alloc"] }

bytes = { version = "1.0", default-features = false }

async-trait = { version = "0.1.48", default-features = false }

openssl = { version = "0.10", default-features = false, optional = true }

ring = { version = "0.17.8", features = ["wasm32_unknown_unknown_js"], default-features = false, optional = true }

pem = { version = "3.0.4", default-features = false, optional = true }

[dev-dependencies]
tokio = { version = "1.0", default-features = false, features = ["full"] }

[package.metadata.docs.rs]
features = ["global-client", "sync"]
